Ajuste no jar para deixar os comandos para para executar no notebook e rodando como se estivessemos instalando a aplicacao no cliente